--- a/eagle.html
+++ b/eagle.html
@@ -23,8 +23,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	<section class='wrapper style1 align-center'>
 		<div class='inner'>
 			<h1>Bald Eagle Telemetry Data</h1>
-			<p style='text-align:left;'><b>Adult bald eagles are not considered migratory birds but are seasonal movers to-and-from breeding territories. Their movement patterns reflect their distance to food resources for survival. Immature bald eagles, on the other hand, have been documented to have wandering movement patterns, not dependent on breeding territories. This period has been described as how they learn what is out there while finding food. The interactive map below displays data collected from 13 bald eagles over a five-year period.</b>
-				<br>
+			<p style='text-align:left;'>The interactive map below displays data collected from 13 bald eagles over a five-year period.
 				<br>
 				Click around to explore the altitudes reached by each eagle, toggle individual eagles off or on using the numbered tabs on the right.
 				<!-- Altitude -->
@@ -33,20 +32,20 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<section class='wrapper style1 align-center'>
 					<div class='items style1 medium'>
 						<section>
+							<h3>Info</h3>
+							<ul style='text-align: left;'><p>
+								<li>Habitat: Forest</li>
+								<li>Food: Fish</li>
+								<li>7ft/2m wing span</li>
+								<li>National emblem of the USA</li>
+							</p></ul>
+						</section>
+						<section>
 							<h3>Bald Eagle</h3>
 							<div class='gallery style1 medium lightbox'>
 								<img class='resize' src='images/eagle.jpg' alt='Bald Eagle' />
 							</div>
 							<h6><i>Haliaeetus leucocephalus</i></h6>
-						</section>
-						<section>
-							<h3>Info</h3>
-							<ul style='text-align: left;'><p>
-								<li>Habitat: Forest</li>
-								<li>Food: Fish</li>
-								<li>Once endangered, they have flourished under protection</li>
-								<li>National emblem of the United States since 1782</li>
-							</p></ul>
 						</section>
 						<section>
 							<h3>Special Thanks</h3>
@@ -63,11 +62,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 		</section>
 		<!-- Footer -->
 		<div class='inner align-center'>
-			<ul class='icons'>
-				<a href='index.html'><span class='icon style2 fas fa-home'></span>
-					<p>Home</p></a>
+
 				</ul>
-				<p>&copy; Ryan Mitchell, Natalie Ferri, Bhagirath Bhatt, & Karen Zeeb</p>
+				<p>&copy; Ryan Mitchell</p>
 			</div>
 			<!-- Scripts -->
 			<script src='assets/js/jquery.min.js'></script>
