--- a/eaglealtitude.html
+++ b/eaglealtitude.html
@@ -190,7 +190,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -240,7 +242,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -290,7 +294,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -340,7 +346,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -390,7 +398,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -440,7 +450,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -490,7 +502,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -540,7 +554,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -590,7 +606,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -640,7 +658,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -690,7 +710,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -740,7 +762,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
@@ -790,7 +814,9 @@ a {
 				'visibility': 'visible'
 			},
 			'paint': {
-				'circle-radius': 1,
+				'circle-radius':{
+					stops: [[2.6, 1], [5, 2], [7.5, 3]]
+				},
 				'circle-opacity': 0.5,
 				'circle-color': {
 					property: 'Altitude',
