--- a/harrisflood.html
+++ b/harrisflood.html
@@ -43,7 +43,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<br>
 				Communities at risk of flood events need to work holistically to ensure that every resident is attended to before, during, and after a natural disaster. Special attention needs to be given to those populations identified as being the most vulnerable.
 			</p>
-			<!-- Flood Info -->
+			<!-- Flood Info
 			<section class='wrapper style1 align-center'>
 				<div class='items style1 medium'>
 					<section>
@@ -79,13 +79,13 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 					</section>
 					<a href='Mitchell - Harris Flood.pdf' justify=center class='icon fa-file-pdf-o' target='_blank'>PDF of Flood Report</a>
 				</div>
-			</section>
-			<!-- Footer -->
+			</section> -->
+			<!-- Footer
 			<div class='inner align-center'>
 				<ul class='icons'>
 					<a href='index.html'><span class='icon style2 fas fa-home'></span>
 						<p>Home</p></a>
-					</ul>
+					</ul> -->
 					<p>&copy; Ryan Mitchell</p>
 				</div>
 				<!-- Scripts -->
