--- a/capstone.html
+++ b/capstone.html
@@ -24,7 +24,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	<section class='wrapper style1 align-center'>
 		<div class='inner'>
 			<h2>Mapping Displacement & Vulnerability to Gentrification<br>within Greater Portland</h2>
-			<iframe src='capstonedata.html' style='width: 800px;height: 500px;background-color: grey;'></iframe>
+			<!-- <iframe src='capstonedata.html' style='width: 800px;height: 500px;background-color: grey;'></iframe>
 			<br>
 			<br>
 			<p style='text-align:left;'><b>Gentrification</b>
@@ -63,9 +63,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 					As more capital investment enters an area, redevelopment and renewal happen. What was once a blighted or down community now commanding a higher market price for rent and housing, drawing in a different socioeconomic base than who is currently residing in that neighborhood. Those current residents are then priced out and need to move elsewhere more in line with their income level. This investment to certain areas has lessened Portland’s non-white presence in the urban core, forcing those residents north and east. The animated picture to the right shows African American migration patterns over a 17-year period from 2000 to 2017, where more color saturation indicates a higher percentage of African American population. It shows that as Portland gentrified its urban core, the African American population moved north towards the Columbia River and east towards Gresham. While this is an example of only one race, it is a race that is historically at a disadvantage in the US and suffers from above normal ranges for the negative aspects of gentrification such as lower-income, lower college attainment, more likely to be renters rather than homeowners, and 6.4 times higher incarceration rates than whites. Also, urban redevelopment tends to happen around the Central Business District before other sections of a city, disproportionately affecting African American communities before any other race and other socioeconomic markers.
 					<br>
 					<br>
-					Low-income residents that moved to a different neighborhood due to being displaced by gentrification were found to move into areas that had a lower median income than the one they previously lived. These areas may not have social and public services to handle the influx of low-income and/or minority residents. Smaller edge cities, such as Gresham, may not have the infrastructure to handle an increase of those in need. Placing a strain on their in-place systems and causing stress in the budget in order to expand or build facilities to accommodate those of lower socioeconomic standing that have migrated from the more centrally located city.</p>
+					Low-income residents that moved to a different neighborhood due to being displaced by gentrification were found to move into areas that had a lower median income than the one they previously lived. These areas may not have social and public services to handle the influx of low-income and/or minority residents. Smaller edge cities, such as Gresham, may not have the infrastructure to handle an increase of those in need. Placing a strain on their in-place systems and causing stress in the budget in order to expand or build facilities to accommodate those of lower socioeconomic standing that have migrated from the more centrally located city.</p> -->
 					<p style='text-align:left;'><b>Vulnerability</b>
-						<br>
 						The vulnerability map shows areas that have high populations of minorities, low median family income, low bachelor’s degree attainment, and higher numbers of renters. All of which are issues identified as being susceptible to gentrification and displacement. When compared to the gentrification & migration map, a majority of vulnerable tracts were also identified as tracts that have seen a migration of displaced populations. Meaning that if redevelopment were to push into North Portland and into the eastern suburbs towards Gresham, that populace would be at risk. Also, many of the vulnerable tracts abut already gentrified ones, increasing the likeliness that those bordering areas will face gentrification in the future. Cartograms were created to accentuate the overall risk and individual vulnerability factors neighborhoods face to gentrification. Most of the area cartograms created show that those with the highest vulnerability score live in areas that match minority and calculated displacement migration. Click the ‘DISTORT’ button to see how each factor bulge eastwards and northwards.
 					</p>
 					<iframe id='cartograms' src='https://ryanjmitchell.github.io/totalcartogram.html' style='width: 1000px; height: 520px; background-color: grey;'></iframe>
@@ -94,21 +93,19 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 						document.getElementById('cartograms').src = 'https://ryanjmitchell.github.io/bachelorscartogram.html';
 					}
 					</script>
-					<br>
-					<br>
 					<p style='text-align:left'>
 						A great example of this is the bachelor’s attainment rates. The area within and surrounding the CBD have high levels of 4-year degree attainment. While the areas north and east do not. The choropleth does show this; however, the cartogram conveys the differences in attainment in a much more defined way. With the eastern edge prominently bulging towards Gresham and the northern limit crossing the Columbia River into Washington state towards Vancouver. While the central and western sections of Portland shrink towards almost not being visible.</p>
 						<iframe src='capstonevulnerable.html' style='width: 100%;height: 600px;background-color: grey;'></iframe>
 						<p style='color: gray; text-align:left;'>Hover over a vulnerable area to see how the individual factors affect the overall risk that community faces from gentrification</p>
 
-						<p style='text-align:left;'><b>Conclusion</b>
+					<!--	<p style='text-align:left;'><b>Conclusion</b>
 							<br>
 							Gentrification is happening. Blighted and rundown sections of cities are seeing a resurgence of investment and revitalization. Cities need this and cannot have stagnant growth. However, when an area is made attractive in order to attract new residents, those that are currently living there are at risk of being priced or pushed out. To maintain a sense of community and culture, cities need to focus on redevelopment that is mixed-use, mixed-density, and mixed-income. This would help to build smarter cities, that preserve a sense of belonging on a neighborhood level.</p>
 							<div class='inner align-center'>
 								<ul class='icons'>
 									<a href='index.html'><span class='icon style2 fas fa-home'></span>
 										<p>Home</p></a>
-									</ul>
+									</ul> -->
 									<p>&copy; Ryan Mitchell</p>
 								</div>
 							</div>
